# pharmapp-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.prod.yml  fly.toml  pyproject.toml
app/: config.py  dependencies.py  logging_config.py  logging_scrubbing.py  main.py
app/auth/: jwt.py  models.py
app/db/: supabase_client.py
app/middleware/: rate_limit.py  request_logging.py
app/routers/: activity_logs.py  adherence.py  bootstrap.py  cabinets.py  caregivers.py  catalog.py  custom_filters.py  device_tokens.py  doctors.py  dose_events.py  dosing_schedules.py  dsar.py  entries.py  health.py  logs.py  measurements.py  medications.py  medicines.py  people.py  (+12 more)
migrations/: 001_pharma_reminder.sql  002_weekly_dose_overrides.sql  003_medication_start_date_and_variable_subtype.sql  004_doctor_profile_ids.sql  005_catalog_csv_schema.sql  006_catalog_intake_method.sql  007_catalog_rpcs_intake_method.sql  008_scheduler_redesign.sql  009_passive_and_prescription_request.sql  010_prescription_requests.sql  011_fix_rls_and_security.sql  012_catalog_authenticated_only.sql  013_catalog_public_only_titlecase.sql  014_catalog_search_functional_indexes.sql  015_catalog_search_strength_text.sql  016_dose_event_note.sql  016_search_catalog_products_v1.sql  017_settings_notifications_privacy.sql  018_routines.sql  019_routines_complete.sql  020_parameters_measurements.sql  021_revoke_anon_phi_tables.sql  022_per_operation_rls_policies.sql  023_caregiver_expiry_revocation.sql  024_audit_schema.sql
nginx/: nginx.conf
scripts/: import_aifa.py  import_aifa_csv.py
(+71 files in other folders)
